tests/expectations/parser/functions/test_keyword_fail.out
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found 'test'
    --> test:3:5
     |
   3 |     test main() {}}
     |     ^^^^
